# colAruco

./: .bashrc  .gitignore  Dockerfile  README.md  colAruco.code-workspace  docker_run.sh
arduinoSrc/src/: main.cpp
arucoCodeGen/: arucoDictTranslator  arucoDictTranslator.cpp
arucoCodeGen/predefined_dictionaries/: aruco_dict_4x4_1000.h  aruco_dict_5x5_1000.h  aruco_dict_6x6_1000.h  aruco_dict_7x7_1000.h  aruco_dict_original_1000.h
cameraCalibration/: CMakeLists.txt  cameraCalibration.cpp  cameraCalibration.py  config.xml  img_acquisition.py  opencv_camera_calibration.py  sample_cameraCalibration.cpp
cameraCalibration/examples/: default.xml
cameraCalibration/src/: cameraCalibration.cpp
codeDetection/: CMakeLists.txt  arucoRec.cpp  demo.cpp  detect_aruco_image.py  detect_aruco_video.py  gen_callib_pattern.py  install-opencv.sh  test_aruco_recon.py
codeDetection/include/: arucoSettings.hpp  cameraSettings.hpp  colArucoSettings.hpp  settings.hpp
codeDetection/src/: arucoRec.cpp  arucoSettings.cpp  cameraSettings.cpp  colArucoSettings.cpp  main.cpp  settings.cpp
colAruco/: colAruco.py  colAruco_manual.txt
docker_ws/: .bashrc  setup_workspace.sh
pythonInputHandler/: colAruco.py
